# DanOS

./: .gitattributes  .gitignore  LICENSE  README.md  bochsrc.bxrc  bootloaderStage1.asm  bootloaderStage1_5.asm  bootloaderStage2.asm  bx_enh_dbg.ini  consoleStuff.asm  debugIterate.ps1  debugIterate2.ps1  debugIterate3.ps1  gdt.asm  iterate.ps1  iterateInternal.ps1  memoryLayout.md  todo.md
diskTools/: Dump.cs  EnumerateDrives.cs  Merge.cs  NativeMethods.txt  Program.cs  README.md  Write.cs  diskTools.csproj  diskTools.sln
diskTools/Properties/: launchSettings.json
kernel/: Cargo.toml  build.rs  buildKernel.ps1  i686-unknown-none.json  link.ld  rust-toolchain.toml
kernel-shared/: Cargo.toml  README.md
kernel-shared/.cargo/: config.toml
kernel-shared/src/: alignment.rs  gdtStuff.rs  lib.rs  magicConstants.rs  memoryHelpers.rs  memoryMap.rs  memoryTypes.rs  physicalMemory.rs  relocation.rs
kernel-shared/src/acpi/: bar.rs  camEntry.rs  descriptionTable.rs  dsdt.rs  fadt.rs  mcfg.rs  mcfgEntry.rs  mod.rs  pciCommonHeader.rs  pciGeneralDevice.rs  pciHeader.rs  rsdp.rs  rsdt.rs
kernel-shared/src/ahci/: abar.rs  controller.rs  mod.rs  sataDrive.rs
kernel-shared/src/assemblyStuff/: cpuID.rs  halt.rs  misc.rs  mod.rs  ports.rs
kernel-shared/src/diskStuff/: read.rs
kernel-shared/src/logging/: criticalSection.rs  logWriter.rs  logger.rs  macros.rs  mod.rs
kernel-shared/src/memory/: map.rs  mapEntry.rs
kernel-shared/src/pageTable/: enums.rs  mod.rs  pageBook.rs  pageDirectoryPointerTable.rs  pageDirectoryTable.rs  pageMapLevel4Table.rs  pageTable.rs  physicalPage.rs
kernel-shared/src/serial/: serialPort.rs
kernel-shared/src/textMode/: macros.rs  mod.rs  teletype.rs  textMode.rs  vga.rs  writer.rs
kernel/.cargo/: config.toml
kernel/src/: main.rs  (+5 more)
kernel64/: Cargo.toml  build.rs  buildKernel.ps1  kernel64.sln  link.ld  rust-toolchain.toml  x86_64-unknown-none.json
kernel64/.cargo/: config.toml
kernel64/codeGen/: Program.cs  codeGen.sln
kernel64/src/: assemblyHelpers.rs  criticalSection.rs  interupts.rs  magicConstants.rs  main.rs  memory.rs  vga.rs
kernel64/src/acpi/: bar.rs  descriptionTable.rs  dsdt.rs  fadt.rs  mcfg.rs  mcfgEntry.rs  pciCommonHeader.rs  pciGeneralDevice.rs  rsdp.rs  rsdt.rs
kernel64/src/ahci/: abar.rs  controller.rs  mod.rs  sataDrive.rs
kernel64/src/assemblyHelpers/: breakpoint.rs  ports.rs
kernel64/src/diskStuff/: read.rs
kernel64/src/interupts/: InteruptDescriptorTable.rs  setup.rs  table.rs
kernel64/src/logging/: logger.rs  mod.rs
kernel64/src/memory/: dumbHeap.rs  memoryMap.rs  memoryStuff.rs  mod.rs  physicalMemory.rs  types.rs  virtualMemory.rs
kernel64/src/pic/: mod.rs  picStuff.rs
kernel64/src/serial/: mod.rs  serialPort.rs
kernel64/src/shell/: kernelShell.rs  mod.rs
kernel64/src/vga/: textMode.rs  writer.rs
stage1/: bootloaderStage1.asm  build.ps1
stage1.5/: bootloaderStage1_5.asm  build.ps1  gdt.asm
stage2/: bootloaderStage2.asm  build.ps1
stage2_rust/: Cargo.toml  build.ps1  build.rs  i386-unknown-none.json  link.ld  rust-toolchain.toml
stage2_rust/.cargo/: config.toml
stage2_rust/src/: main.rs
stage2_rust/src/disk/: diskDriver.rs  fatDriver.rs  mbs.rs  mod.rs
stage2_rust/src/memory/: map.rs  mapEntry.rs  mod.rs
(+4 files in other folders)
