[package]
name = "kernel-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = { version = "0.7.4", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
# If use of BIOS functions is allowed
use_bios = []
