[package]
name = "kernel-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
elf = { version = "0.7.4", default-features = false }
critical-section = { version = "1.2.0", default-features = false }
once_cell = { version = "1.20.2", default-features = false, features = [
    "critical-section",
] }

[patch.crates-io]
portable-atomic = { path = "../../portableAtomic" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
# If use of BIOS functions is allowed
use_bios = []
