[package]
name = "kernel64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel-shared = { path = "../kernel-shared" }
critical-section = { version = "1.2.0" }
once_cell = {version = "1.20.2", default-features = false, features = ["critical-section"]}

[profile.dev]
panic = "abort"
debug = true
opt-level = 0

[profile.release]
panic = "abort"
debug = true
