[package]
name = "kernel64"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel-shared = { path = "../kernel-shared" }

[patch.crates-io]
portable-atomic = { path = "../../portableAtomic" }

[profile.dev]
panic = "abort"
debug = true
opt-level = 0

[profile.release]
panic = "abort"
debug = true
