[package]
name = "stage2_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel-shared = { path = "../kernel-shared", features = ["use_bios"] }

[profile.dev]
panic = "abort"
lto = false
# Need to size optmize to keep size properly contrained to 16-bit space
opt-level = "s"
overflow-checks = true
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = 3
