[package]
name = "stage2_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel-shared = { path = "../kernel-shared", features = ["use_bios"] }
enumflags2 = "0.7.11"

[profile.dev]
panic = "abort"
lto = false
# Need to size optmize to keep size properly contrained to 16-bit space
opt-level = "s"
overflow-checks = true
debug = true

[profile.release]
panic = "abort"
lto = true
# We're still too bloated. For now we'll sacrifice debugging Stage2 to allow Stage3+ to be arbitrary size.
opt-level = "s"
